--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,46 @@
-name: Check GCP action
+name: GCP OIDC – read secret
 on:
   workflow_dispatch:
-  pull_request:
-    branches:
-      - main
 
 permissions:
-  id-token: write
+  id-token: write    # REQUIRED for OIDC
+  contents: read
+
+env:
+  GCP_PROJECT: gcp-labs-z5woyhds
+  WIP_PROVIDER: projects/44705150860/locations/global/workloadIdentityPools/iam-lab-7-gh-pool/providers/iam-lab-7-gh-pool-oidc-provider
+  TARGET_SA: iam-lab-7-target@gcp-labs-z5woyhds.iam.gserviceaccount.com
 
 jobs:
-  Get_OIDC_ID_token:
+  run:
     runs-on: ubuntu-latest
     steps:
-      - id: "auth"
-        name: "Authenticate to GCP"
-        uses: "google-github-actions/auth@v2.1.3"
+      - uses: actions/checkout@v4
+
+      - name: Authenticate to GCP via OIDC
+        id: auth
+        uses: google-github-actions/auth@v2
         with:
-          create_credentials_file: "true"
-          workload_identity_provider: "projects/44705150860/locations/global/workloadIdentityPools/iam-lab-7-gh-pool/providers/iam-lab-7-gh-pool-oidc-provider" # In the providerId, the numerical project ID (12 digit number) should be used instead of the alphanumeric project ID. ex: projects/123123123123/locations/global/workloadIdentityPools/iam-lab-7-gh-pool/providers/iam-lab-7-gh-pool-oidc-provider'
-          service_account: "iam-lab-7-target@gcp-labs-z5woyhds.iam.gserviceaccount.com" # <sa-name>@<proj-id>.iam.gserviceaccount.com
-          activate_credentials_file: true
-      - id: "gcloud"
-        name: "gcloud"
-        run: |-
-          gcloud config set project gcp-labs-z5woyhds
-          gcloud config set account 'iam-lab-7-target@gcp-labs-z5woyhds.iam.gserviceaccount.com'
-          gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}"
+          workload_identity_provider: ${{ env.WIP_PROVIDER }}
+          service_account: ${{ env.TARGET_SA }}
+          project_id: ${{ env.GCP_PROJECT }}
+          # These are the *valid* v2 options if you want ADC set up automatically:
+          create_credentials_file: true
+          export_environment_variables: true
+          # (Do NOT use 'activate_credentials_file' — it doesn't exist in v2.)
+
+      - name: Setup gcloud
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          version: '>= 474.0.0'
+
+      - name: Verify caller
+        run: |
           gcloud auth list
-          gcloud projects list
-          gcloud secrets list
+          gcloud config get-value account
+          gcloud config set project "$GCP_PROJECT"
+
+      - name: Read secret
+        run: |
+          SECRET_ID="flag-iam-7"
+          gcloud secrets versions access latest --secret="$SECRET_ID" --project="$GCP_PROJECT"
